# firebox

./: .gitignore  Dockerfile  README.md  firebox_config.yaml  pyproject.toml
examples/: quick_file_watcher.py  quick_nmap_scan.py  quick_start.py
examples/sandbox_data/: nmap_scan_results.txt
firebox/: __init__.py  cleanup.py  code_snippet.py  config.py  constants.py  docker_sandbox.py  exceptions.py  filesystem.py  logging.py  models.py  network.py  process.py  sandbox.py  subscriptions.py  utils.py  websocket_client.py
firebox/api/: __init__.py  async_docker_adapter.py  configuration.py  docker_adapter.py  docker_builder.py  models.py  sandbox_api.py
firebox/code_snippet/: __init__.py  main.py
firebox/filesystem/: __init__.py  main.py  watcher.py
firebox/models/: __init__.py  code_snippet.py  config.py  filesystem.py  process.py  sandbox.py  terminal.py
firebox/process/: __init__.py  main.py
firebox/sandbox/: __init__.py  code_snippet.py  docker_sandbox.py  env_vars.py  exception.py  filesystem.py  filesystem_watcher.py  main.py  out.py  process.py  sandbox_connection.py  sandbox_rpc.py  terminal.py  websocket_client.py
firebox/terminal/: __init__.py  main.py
firebox/utils/: __init__.py  api_key.py  filesystem.py  future.py  id.py  str.py  threads.py  websocket_client.py  websocket_server.py
sandbox_data/: another_file.txt
tests/: test_custom_dockerfile.py  test_filesystem.py  test_firebox.py  test_firebox_config.yaml  test_process.py  test_sandbox.py
tests/api/: test_integration.py
tests/firebox/: test_firebox.py  test_firebox_config.yaml
(+16 files in other folders)
