[tool.poetry]
name = "firebox"
version = "0.1.0"
description = "A sandbox environment for running code securely"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "firebox" },
]

[tool.poetry.dependencies]
python = "^3.10"
docker = "^5.0.0"
pydantic = "^1.8"
websockets = "^10.0"
aiohttp = "^3.7"
python-dateutil = "^2.8"
python-dotenv = "^0.19.0"
typed-ast = "^1.5.0"  

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-asyncio = "^0.15"
black = "^21.5b1"
isort = "^5.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"