[tool.poetry]
name = "firebox"
version = "0.1.0"
description = "Yet another sandbox environment for running code."
authors = ["jiandongj <jiandongj@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "firebox"}]

[tool.poetry.dependencies]
python = "^3.8"
docker = "^7.1.0"
pydantic = "^1.8"
PyYAML = "^6.0"
aiohttp = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-asyncio = "^0.15"
black = "^21.5b1"
isort = "^5.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"